Fix crash when the EMI plugin is classloaded too early